--- a/.github/workflows/docker-publish.yaml
+++ b/.github/workflows/docker-publish.yaml
@@ -40,9 +40,9 @@ jobs:
       # Install the cosign tool except on PR
       # https://github.com/sigstore/cosign-installer
       - name: Install cosign
-        uses: sigstore/cosign-installer@11086d25041f77fe8fe7b9ea4e48e3b9192b8f19 # v3.1.2
+        uses: sigstore/cosign-installer@v3.8.0
         with:
-          cosign-release: 'v2.2.0'
+          cosign-release: 'v2.4.2'
 
 
       # Workaround: https://github.com/docker/build-push-action/issues/461
